--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -18,6 +18,27 @@
   border-width: 1px; */
   width: 66%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
+}
+
+.input-section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+input {
+  width: 30%;
+  margin: 0px 10px 0px 10px;
+  padding: 10px
+}
+
+.home-page-generate-button {
+  width: 15rem;
+  padding: 5px;
+  margin: 20px 0px 0px 0px;
+  cursor: pointer;
 }
